# libprocess

./: Makefile  Makefile.in  config.status  configure  configure.ac  gate.hpp  legacy.cpp  philosophers.cpp  process.cpp  process.hpp  record-process.hpp  serialization.cpp  serialize.cpp  serialize.hpp  test-master.cpp  test-slave.cpp  test.hpp  tuple.cpp  tuple.hpp  utility.hpp
autom4te.cache/: output.0  traces.0
examples/: ._Electrical Engineering & Computer Sciences | EECS at UC Berkeley_files  Makefile  Makefile.in~  Makefile~  httpd  httpd.cpp  httpd.cpp~  httpd.d  index.html~  net.hpp  net.hpp~
examples/files/: ._eecsHome.css
swig/: Makefile.in
swig/python/: test.py
